Fix: Improve positioning of checkbox Dev: Better dark mode integration

--- a/css/select.bootstrap.scss
+++ b/css/select.bootstrap.scss
@@ -1,4 +1,4 @@
 
-$selected-background-color: rgba(0, 136, 204, 0.9) !default;
+$dt-select-tick-margin-top: -17px !default;
 
 @import 'select.dataTables.scss';
