--- a/css/select.bootstrap4.scss
+++ b/css/select.bootstrap4.scss
@@ -1,5 +1,2 @@
 
-$selected-background-color: rgba(2, 117, 216, 0.9) !default;
-$checkbox-margin-top: -2px !default;
-
 @import 'select.dataTables.scss';
