--- a/css/select.bootstrap5.scss
+++ b/css/select.bootstrap5.scss
@@ -1,7 +1,4 @@
 
-$selected-background-color: rgba(13, 110, 253, 0.9) !default;
-$checkbox-margin-top: -5px !default;
-
 @import 'select.dataTables.scss';
 
 table.dataTable.table-sm tbody td.select-checkbox::before {
