--- a/css/select.bulma.scss
+++ b/css/select.bulma.scss
@@ -1,5 +1,4 @@
 
-$selected-background-color: rgba(0, 209, 178, 0.9) !default;
-$checkbox-margin-top: -2px !default;
+$dt-select-tick-border-checked: 1px solid black !default;
 
 @import 'select.dataTables.scss';
