--- a/css/select.foundation.scss
+++ b/css/select.foundation.scss
@@ -1,6 +1,2 @@
 
-
-$selected-background-color: rgba(0, 137, 182, 0.9) !default;
-$table-selected: #008cba !default;
-
 @import 'select.dataTables.scss';
