--- a/css/select.semanticui.scss
+++ b/css/select.semanticui.scss
@@ -1,5 +1,2 @@
 
-$selected-background-color: rgba(0, 0, 0, 0.05) !default;
-$checkbox-margin-top: -3px !default;
-
 @import 'select.dataTables.scss';
